--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.9.0",
     "axios": "^1.8.4",
     "dotenv": "^16",
     "koa": "^2",
