feat: enhance LLM service and add component caching
- Updated DeepSeek API endpoint URL and added API key validation
- Added caching system for component generation results to improve performance
- Refactored MCP adapter to use new GenerateComponentTool pattern
- Added type safety improvements in mcpProtocol router
- Added new "mcp" npm script command for starting MCP server
- Improved error handling and response formatting in LLM service
- Standardized code formatting and added detailed error messages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "mcp": "node start-mcp.js",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
